# npmctl

./: .gitattributes  .gitignore  .yamllint.yml  AGENTS.md  Dockerfile  LICENSE  PROJECT_TREE_STATUS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-lander.yml  docs-ssot.yml  e2e-npm.yml  live-npm-gate.yml  python-matrix.yml  release.yml
.ssot/: registry.json
.ssot/adr/: ADR-1000-create-only-reconciliation.yaml  ADR-1001-metadata-ownership-markers.yaml  ADR-1002-repair-safe-certificate-reconciliation.yaml  ADR-1003-provider-backed-dns-reconciliation.yaml  ADR-1004-dns-record-ownership-delete-semantics.yaml  ADR-1005-dns-supported-record-type-writes.yaml  ADR-1006-independent-contract-version-axes.yaml  ADR-1007-canonical-digests-immutable-execution-artifacts.yaml  ADR-1008-stepwise-transactional-migrations.yaml  ADR-1009-separate-reconciliation-and-resource-migrations.yaml  ADR-1010-provider-capability-api-profile-versioning.yaml  ADR-1011-capability-specific-migration-recovery.yaml  ADR-1012-artifact-authenticity-trust-policy.yaml  ADR-1013-artifact-sensitive-data-boundaries.yaml  ADR-1014-migration-leases-idempotent-checkpoints.yaml  ADR-1015-plugin-contract-migration-participation.yaml
.ssot/exports/: registry.release-0.3.0.json  registry.release-0.3.1-certification-closure.json
.ssot/graphs/: registry.release-0.3.0.graph.json  registry.release-0.3.1-certification-closure.graph.json
.ssot/reports/: certification.report.json  repair-safe-certificate-reconciliation-implementation.md  validation.report.json
.ssot/specs/: SPEC-1000-create-only-controller-contract.yaml  SPEC-1001-metadata-ownership-and-conflict-guards.yaml  SPEC-1002-adoption-repair-controls.yaml  SPEC-1003-certificate-reconciliation-policy.yaml  SPEC-1004-certificate-issuance-safety-and-error-classification.yaml  SPEC-1005-dns-reconciliation-provider-write-contract.yaml  (+15 more)
.tmp/: coverage.json
branding/: badges.md  repo-description.md  seo-snippets.md  social-preview-copy.md
deploy/lander/: README.md  (+1 more)
docs/: AGENTS.md  access-lists.md  adoption.md  artifact-trust.md  cli.md  compliance.md  contracts.md  desired-state.md  dns-providers.md  dns.md  extensions.md  github-actions.md  index.md  migration-manifests.md  migration-recovery.md  namecheap.md  npm-api-compatibility.md  operational-hardening.md  owner-scoped-reconcile.md  plan-artifacts.md  provider-capabilities.md  repository-manifest.md  schema-migrations.md  security.md  seo-aeo-aieo.md  ssl-certificates.md
scripts/: capture_npm_schema.py  check.sh  validate_schemas.py
tools/: render_ssot_docs.py
(+80 files in other folders)
